--- a/Lyn-website/css/stylesheet.css
+++ b/Lyn-website/css/stylesheet.css
@@ -1,3 +1,154 @@
+		.dropdown {
+			position: relative;
+			display: inline-block;
+		}
+
+		.dropdown-content {
+			display: none;
+			position: relative;
+			background-color: none;
+			font-size: 9px;
+			height: 15px;
+		}
+
+		.dropdown:hover .dropdown-content {
+			display: block;
+		}
+
+		nav {
+			height: 40px;
+			width: 100%;
+			background: none;
+			font-size: 10px;
+			position: relative;
+			top: 10px;
+			float: left;
+			text-transform: uppercase;
+			font-family: 'Raleway',sans-serif;
+			letter-spacing: 2px;
+			color: #fff;
+			z-index: 9999;
+			text-align: left;
+			margin-bottom: 7%;
+		}
+
+		nav a:hover {
+				background:#bad433;
+				color: #fff;
+			} 
+
+		nav ul {
+			padding: 0;
+			margin: 10px;
+		}
+
+		nav p {
+			color: #fff;
+			display: inline-block;
+			text-align: left;
+			text-decoration: none;
+		}
+
+		nav li {
+			display: inline;
+			float: left;
+			padding-right: 50px;
+		}
+
+		nav a {
+			color: #fff;
+			display: inline-block;
+			text-align: right;
+			text-decoration: none;
+			padding:10px 20px;
+		}
+
+		nav a#pull {
+			display: none;
+		}
+
+		p.active{
+			font-weight: bold;
+			color: #bad433;
+			letter-spacing: 15px;
+		}
+
+
+
+		/* ==========================================================================
+		Responsive
+		========================================================================== */
+
+
+
+		@media screen and (max-width: 1500px) {
+
+			nav {
+				width: 100%;
+				height: auto;
+				border-bottom: 0;
+			}
+			nav ul {
+				display: none;
+				height: auto;
+			}
+			
+			nav li {
+				width: 100%;
+				float: left;
+				position: relative;
+			}
+			
+			nav a {
+				text-align: left;
+				width: 100%;
+				background: #222;		  	
+			}
+			
+			nav p {
+				text-align: left;
+				width: 100%;
+				margin: 20px;
+			}
+			
+			nav a:hover {
+				background:#bad433;
+				color: #fff;
+			}  	
+			
+			nav a#pull {
+				display: block;
+				background: none;
+				width: 100%;
+				position: relative;
+				font-size:20px;
+				color: #bad433;
+			}
+
+			nav a#pull:after {
+				content:"";
+				background: none;
+				width: 30px;
+				height: 30px;
+				color: #FFF;
+				display: inline-block;
+				position: absolute;
+				right: 15px;
+				top: 10px;
+			}
+
+			nav a.active{
+				font-weight: bold;
+				color: #bad433;
+				letter-spacing: 4px;
+			}
+			
+		}
+
+
+/*EVERY PAGE*/
+
+
 div.absolute {
 	position: fixed;
 	bottom:-2px;
