--- a/Lyn-website/css/stylesheet.css
+++ b/Lyn-website/css/stylesheet.css
@@ -99,24 +99,24 @@
 				position: relative;
 			}
 			
-			nav a {
+			li a {
 				text-align: left;
 				width: 100%;
 				background: #222;		  	
 			}
 			
-			nav p {
+			li p {
 				text-align: left;
 				width: 100%;
 				margin: 20px;
 			}
 			
-			nav a:hover {
+			li a:hover {
 				background:#bad433;
 				color: #fff;
 			}  	
 			
-			nav a#pull {
+			li a#pull {
 				display: block;
 				background: none;
 				width: 100%;
@@ -125,7 +125,7 @@
 				color: #bad433;
 			}
 
-			nav a#pull:after {
+			li a#pull:after {
 				content:"";
 				background: none;
 				width: 30px;
@@ -137,7 +137,7 @@
 				top: 10px;
 			}
 
-			nav a.active{
+			li a.active{
 				font-weight: bold;
 				color: #bad433;
 				letter-spacing: 4px;
