--- a/Lyn-website/css/stylesheet.css
+++ b/Lyn-website/css/stylesheet.css
@@ -1,19 +1,6 @@
-/*.dropdown {
-	position: relative;
-	display: inline-block;
+body {
+	background-color: black;
 }
-
-.dropdown-content {
-	display: none;
-	position: relative;
-	background-color: none;
-	font-size: 9px;
-	height: 15px;
-}
-
-.dropdown:hover .dropdown-content {
-	display: block;
-}*/
 
 nav {
 	height: 40px;
@@ -116,7 +103,7 @@ Responsive
 	}  	
 	
 	li a#pull {
-		display: block;
+		display: table;
 		background: none;
 		width: 100%;
 		position: relative;
@@ -124,7 +111,7 @@ Responsive
 		color: #bad433;
 	}
 
-	li a#pull:after {
+	/*li a#pull:after {
 		content:"";
 		background: none;
 		width: 30px;
@@ -134,7 +121,7 @@ Responsive
 		position: absolute;
 		right: 15px;
 		top: 10px;
-	}
+	}*/
 
 	li a.active{
 		font-weight: bold;
@@ -194,8 +181,8 @@ img.absolute {
 
 
 div.portfolio {
-	   padding: 7%;
-	   padding-top:10%;
+	padding: 7%;
+	padding-top:10%;
 	}	
 
 p.body {
